--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,22 +1,37 @@
 {% load staticfiles %}
 <html>
     <head>
-        <title>Venngineering Blog</title>
+        <title>Venngineering</title>
 
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous"/>
         <link rel="stylesheet" href='{% static "css/blog.css" %}'/>
-        <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow" rel="stylesheet">
 
     </head>
     <body>
-        <div class="page-header">
-            <h1><a href="/">Venngineering Blog</a></h1>
+      <div class="page-header">
+          <h1><a href="/">Venngineering</a></h1>
+      </div>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" href="/posts">Posts</a>
+            <a class="nav-item nav-link" href="#">Pricing</a>
+            <a class="nav-item nav-link disabled" href="#">Disabled</a>
+          </div>
         </div>
+      </nav>
 
-        <div class="content container">
-          <div class="row">
-            <div class="col-md-8">
+
+        <div class="content container" id="center_container">
+          <div class="row" id="center_row" >
+            <div class="container" id="center_content">
               {% block content %}
               {% endblock %}
             </div>
