--- a/blog/templates/blog/static/css/blog.css
+++ b/blog/templates/blog/static/css/blog.css
@@ -9,6 +9,10 @@ h1 a {
   padding: 20px 20px 20px 40px;
 }
 
+.navbar {
+  border-bottom: none;
+}
+
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active{
   color: #ffffff;
   font-size: 36pt;
