added markdown and ckeditor, currently broken likely due to media_root and ur l not being set up

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,3 +1,4 @@
+
 #center_row{
   margin-top: 0px;
   background-color: transparent;
@@ -13,6 +14,7 @@
   max-width: none;
   width: 100%;
   padding-top: 10px;
+  border: thin solid lightgrey;
 }
 
 body{
@@ -33,7 +35,7 @@ body{
 .navbar{
   padding-top: 4px;
   padding-bottom: 4px;
-  margin-bottom: -1px;
+  margin-bottom: 20px;
   border-bottom: none;
 
 }
