--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -13,7 +13,7 @@
       <div class="page-header">
           <!-- <h1><a href="/">Venngineering</a></h1> -->
 
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-sm navbar-light bg-light">
           <h1 class="navbar-brand" href="/">Venngineering</h1>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -22,8 +22,7 @@
             <div class="navbar-nav">
               <a class="nav-item nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
               <a class="nav-item nav-link" href="/posts">Posts</a>
-              <a class="nav-item nav-link" href="#">Pricing</a>
-              <a class="nav-item nav-link disabled" href="#">Disabled</a>
+              <a class="nav-item nav-link" href="/posts">About</a>
             </div>
           </div>
         </nav>
