--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,15 +1,17 @@
 {% extends 'blog/base.html' %}
   {% block content %}
       <div class="post">
+
+
+        <h1>{{ post.title }}</h1>
+        <hr>
         {% if post.published_date %}
           <div class="date">
             {{ post.published_date }}
           </div>
         {% endif %}
 
-        <h1>{{ post.title }}</h1>
-        <hr>
-        <p>{{ post.text|linebreaksbr }}</p>
+        <p>{{ post.text|safe }}</p>
       </div>
 
     {% endblock %}
