--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -5,13 +5,19 @@
 
         <h1>{{ post.title }}</h1>
         <hr>
-        {% if post.published_date %}
-          <div class="date">
-            {{ post.published_date }}
+        <div class="row" id="TagDateRow">
+          <div class="col-md-8">
+              <i class="fas fa-tag" id="icons"></i>{% for tag in post.tags.all %} <span id="tags">{{ tag.name }}</span>  {% endfor %}
           </div>
-        {% endif %}
+          <div class="col-md-4">
+            <div class="date">
+              <i class="fas fa-clock" id="icons"></i> {{ post.published_date }}
+            </div>
+          </div>
 
-        <p>{{ post.text|safe }}</p>
+        </div>
       </div>
+        <p>{{ post.text|safe }}</p>
+
 
     {% endblock %}
