Added front page latest details on cards, post list set as media class so it is responsive on smaller resolutions, post detail now has post picture in center, about pages added with cards for links

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -29,7 +29,7 @@
             <div class="navbar-nav">
               <a class="nav-item nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
               <a class="nav-item nav-link" href="/posts">Posts</a>
-              <a class="nav-item nav-link" href="/posts">About</a>
+              <a class="nav-item nav-link" href="/about">About</a>
             </div>
           </div>
         </nav>
