--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -29,7 +29,7 @@ body{
 hr{
   margin-top: 10px;
   margin-bottom: 5px;
-  background-color: #F25F5C;
+  background-color: #247BA0;
 }
 #center_row{
   margin-top: 0px;
@@ -116,7 +116,7 @@ h1 a {
 }
 
 h1 a:hover {
-  color: #F25F5C;
+  color: #247BA0;
 }
 
 }
@@ -129,7 +129,7 @@ h1 a:hover {
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active{
   color: #212529;
-  font-size: 36pt;
+  /* font-size: 36pt; */
   text-decoration: none;
   margin-bottom: 0px;
 }
@@ -168,4 +168,12 @@ h1{
 
 .post {
   margin-bottom: 70px;
+}
+
+.card-title a{
+  color: #212529;
+}
+
+.card-title{
+    text-align: center;
 }
