--- a/blog/templates/blog/front_page.html
+++ b/blog/templates/blog/front_page.html
@@ -2,13 +2,18 @@
   {% block content %}
   <div class="container">
     <div class="jumbotron">
-      <h1><span class="head-letters" style="color:#247BA0">V</span><span class="fade-text" id="en" style="color:#212529" >en</span><span id="ng" style="color:#247BA0">ng</span><span class="fade-text" style="color:#212529">ineering</span></h1>
+      <h1><span style="color:#247BA0">V</span><span style="color:#212529">en</span><span style="color:#247BA0">ng</span><span style="color:#212529">ineering</span></h1>
       <p>A blog about my projects in hardware, software, and everything in between</p>
     </div>
-  <div class="row" id="latest3">
+    <hr>
+    <h1>Latest Posts</h1>
+  <div class="card-deck">
     {% for post in posts %}
-    <div class="col-md-3">
-      <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+    <div class="card">
+      <a href="{% url 'post_detail' pk=post.pk %}"><img class="card-img-top" src="{{ post.post_image.url }}" alt="Latest Post"></a>
+      <div class="card-body">
+        <h5 class="card-title"><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h5>
+      </div>
     </div>
     {% endfor %}
   </div>
