--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,6 +1,6 @@
 {% extends 'blog/base.html' %}
   {% block content %}
-      <div class="post">
+      <div class="post container-fluid">
 
 
         <h1>{{ post.title }}</h1>
@@ -14,10 +14,13 @@
               <i class="fas fa-clock" id="icons"></i> {{ post.published_date }}
             </div>
           </div>
-
         </div>
+
+      <div class="text-center">
+        <img class="img-fluid rounded" src="{{ post.post_image.url }}" alt="Post Image" width="300px">
       </div>
+      <div class="text container-fluid"
         <p>{{ post.text|safe }}</p>
-
-
+      </div>
+      </div>
     {% endblock %}
