--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -4,7 +4,7 @@
     <h1>About</h1>
     <hr>
     <p>Hello, I am Josh venn, a Masters Mechanical Engineer and I just write this blog for fun so that I have somewhere to write about the projects I get up to and hopefully help some people.</p>
-    <p>Feel free to contact me or check out my other links using the information below!</p>
+    <p>Feel free to contact me or check out my other links using the information below</p>
   <div class="card-deck">
     <div class="card text-white bg-info mb-3" style="max-width: 18rem;">
       <div class="card-header"><i class="fas fa-envelope"></i> Email</div>
