changed gitignore and twaeked about page

--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -9,7 +9,7 @@
     <div class="card text-white bg-info mb-3" style="max-width: 18rem;">
       <div class="card-header"><i class="fas fa-envelope"></i> Email</div>
       <div class="card-body">
-        <h5 class="card-text">Josh@Venngineering.com</h5>
+        <h5 class="card-text">Josh@venngineering.com</h5>
       </div>
     </div>
     <div class="card bg-light mb-3" style="max-width: 18rem;">
