changed static files, about page

--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -3,7 +3,7 @@
   <div class="container-fluid">
     <h1>About</h1>
     <hr>
-    <p>Hello, I am Josh venn, a Masters Mechanical Engineer and I just write this blog for fun so that I have somewhere to write about the projects I get up to and hopefully help some people.</p>
+    <p>Hello, I am Joshua venn, a Masters Mechanical Engineer and this blog exists so that I have somewhere to write about the projects I get up to and hopefully help some people, as well as just for the fun of it!</p>
     <p>Feel free to contact me or check out my other links using the information below</p>
   <div class="card-deck">
     <div class="card text-white bg-info mb-3" style="max-width: 18rem;">
